--- a/styles/base.css
+++ b/styles/base.css
@@ -95,12 +95,12 @@ body {
     font-size: 13px;
     
     /*NOTE: IE has its own DropShadow filter that could be used. */
-    /* Opera 10.5/Mozilla 4.0 */
-    box-shadow:         0px 3px 6px rgba(0, 0, 0, .08);
-    /* Mozilla 3.5- */
+    /* Mozilla 3.6- */
     -moz-box-shadow:    0px 3px 6px rgba(0, 0, 0, .08);
     /* WebKit 522 (Chrome, Safari 3) */
     -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, .08);
+    /* Opera 10.5/Mozilla 4.0/WebKit */
+    box-shadow:         0px 3px 6px rgba(0, 0, 0, .08);
 }
 
 
@@ -135,7 +135,7 @@ body {
     /*NOTE: IE has its own DropShadow filter that could be used. */
     /* Opera 10.5/Mozilla 4.0 */
     box-shadow:         inset 0px 2px 3px rgba(0, 0, 0, .16);
-    /* Mozilla 3.5- */
+    /* Mozilla 3.6- */
     -moz-box-shadow:    inset 0px 2px 3px rgba(0, 0, 0, .16);
     /* WebKit 522 (Chrome, Safari 3) */
     /*BUG: The inset shadow does not stay inside of the rounded corners.  (See Chromium issue 29427.) */
@@ -267,7 +267,7 @@ body {
     opacity:    0;
     position:   fixed;
     background: #FFF;
-    background: rgba(255, 255, 255, .9);
+    background: rgba(255, 255, 255, .95);
     border:     #A3A3A3 1px solid;
     padding:    3px;
     z-index:    2;
@@ -287,12 +287,12 @@ body {
     /* This shadow is slightly dimmer than the panel because it is supposed to look higher up. */
     /* TODO: The direction of the shadow could be set dynamically based on where it is on the page. */
     /* NOTE: IE has its own DropShadow filter that could be used. */
-    /* Opera 10.5/Mozilla 4.0 */
-    box-shadow:         2px 2px 3px rgba(0, 0, 0, .2);
     /* Mozilla 3.5- */
     -moz-box-shadow:    2px 2px 3px rgba(0, 0, 0, .2);
     /* WebKit 522 (Chrome, Safari 3) */
     -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, .2);
+    /* Opera 10.5/Mozilla 4.0/WebKit */
+    box-shadow:         2px 2px 3px rgba(0, 0, 0, .2);
 }
 
 
@@ -344,12 +344,12 @@ body {
     
     /* Add both a drop shadow and an inset shadow to give a slightly rounded effect.
     /*NOTE: IE has its own DropShadow filter that could be used. */
-    /* Opera 10.5/Mozilla 4.0 */
-    box-shadow:         3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
-    /* Mozilla 3.5- */
-    -moz-box-shadow:    3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
+    /* Mozilla 3.6- */
+    -moz-box-shadow:    3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
     /* WebKit 522 (Chrome, Safari 3) */
-    -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    /* Opera 10.5/Mozilla 4.0/WebKit */
+    box-shadow:         3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
 }
 
 
