--- a/styles/base.css
+++ b/styles/base.css
@@ -50,7 +50,8 @@ body {
     left:     0;
     width:    100%;
     height:   30px;
-    z-index:  2;
+    /* This needs to be above most floating elements (excluding the context menu). */
+    z-index:  999999;
 }
 
 .searchBars {
@@ -270,7 +271,8 @@ body {
     background: rgba(255, 255, 255, .95);
     border:     #A3A3A3 1px solid;
     padding:    3px;
-    z-index:    2;
+    /* This element must be on top (because it is created later, it is also above the topBar too). */
+    z-index:    999999;
     
     /* Transition for Mozilla (Firefox 4.0+) */
     -moz-transition:    opacity .2s ease-in;
@@ -350,6 +352,9 @@ body {
     -webkit-box-shadow: 3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
     /* Opera 10.5/Mozilla 4.0/WebKit */
     box-shadow:         3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    
+    /* Just below the topBar (and context menu) but above callouts. */
+    z-index: 999990;
 }
 
 
