--- a/styles/base.css
+++ b/styles/base.css
@@ -331,7 +331,15 @@ body {
     /* A solid background for IE/Mozilla 2-/Opera 9.6- */
     background: #FFF;
     /* Transparent white background for Mozilla/Opera 10/WebKit */
-    background: rgba(255, 255, 255, .95);
+    background: rgba(255, 255, 255, .97);
+    /* Firefox 3.6+ */
+    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    /* Chrome/Safari 5.1+ */
+    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    background:      -o-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    /* IE 10 */
+    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    background:         linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
     border:     #A3A3A3 1px solid;
     /* Add enough padding to the top to push the contents past the top bar. */
     /* Add extra padding on the sides so that the optional scroll bars will not cover up any of the content. */
@@ -472,11 +480,12 @@ label {
 .callout {
     -moz-border-radius: 9px;
     border-radius:      9px;
-    -moz-box-shadow:    3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
-    -webkit-box-shadow: 3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
-    -ms-box-shadow:     3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
-    box-shadow:         3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    -moz-box-shadow:    3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
+    -webkit-box-shadow: 3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
+    -ms-box-shadow:     3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
+    box-shadow:         3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
     background: #FFF;
+    /* Transparent background for Firefox 3.5- */
     background: rgba(255, 255, 255, .95);
     /* Firefox 3.6+ */
     background:    -moz-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
