--- a/styles/base.css
+++ b/styles/base.css
@@ -58,12 +58,12 @@ body {
     /* A solid background for IE/Mozilla 2-/Opera 9.6- */
     background:	#FFF;
     /* Transparent white background for Firefox 3.5-/Opera 10 */
-    background:	rgba(255, 255, 255, .9);
+    background:	rgba(255,255,255,.9);
     /*TODO: Determine if gradients increase CPU usage significantly? */
     /* Transparent white gradient for Firefox 3.6+ */
-    background:	-moz-linear-gradient(rgba(255, 255, 255, .98), rgba(255, 255, 255, .93) 25%, rgba(255, 255, 255, .9));
+    background:	-moz-linear-gradient(rgba(255,255,255,.98), rgba(255,255,255,.93) 25%, rgba(255,255,255,.9));
     /* Transparent white gradient for WebKit */
-    background:	-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, .96)), color-stop(.25, rgba(255, 255, 255, .92)), color-stop(1, rgba(255, 255, 255, .9)));
+    background:	-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255,255,255,.96)), color-stop(.25, rgba(255,255,255,.92)), color-stop(1, rgba(255,255,255,.9)));
     width:		100%;
     height:		100%;
     text-align: center;
@@ -73,7 +73,7 @@ body {
     /* A solid background for IE/Mozilla (Firefox 2-)/Opera 9.6- */
     background:    #FFD;
     /* Transparent yellow background */
-    background:    rgba(255, 255, 221, .9);
+    background:    rgba(255,255,221,.9);
     border-top:    #EEE999 solid 1px;
     border-bottom: #EEE999 solid 1px;
     
@@ -97,16 +97,16 @@ body {
     
     /*NOTE: IE has its own DropShadow filter that could be used. */
     /* Mozilla 3.6- */
-    -moz-box-shadow:    0px 3px 6px rgba(0, 0, 0, .08);
-    /* WebKit 522 (Chrome, Safari 3) */
-    -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, .08);
+    -moz-box-shadow:    0px 3px 6px rgba(0,0,0,.08);
+    /* WebKit 522 (Chrome,Safari 3) */
+    -webkit-box-shadow: 0px 3px 6px rgba(0,0,0,.08);
     /* Opera 10.5/Mozilla 4.0/WebKit */
-    box-shadow:         0px 3px 6px rgba(0, 0, 0, .08);
+    box-shadow:         0px 3px 6px rgba(0,0,0,.08);
 }
 
 
 .queryInput {
-    background: rgba(255, 255, 255, .5);
+    background: rgba(255,255,255,.5);
     
     /* Padding is used to push the text away from the rounded corners. */
     padding: 3px 25px 1px 7px;
@@ -135,12 +135,12 @@ body {
     /* Add slight gradient shadow to the top of the input box. */
     /*NOTE: IE has its own DropShadow filter that could be used. */
     /* Opera 10.5/Mozilla 4.0 */
-    box-shadow:         inset 0px 2px 3px rgba(0, 0, 0, .16);
+    box-shadow:         inset 0px 2px 3px rgba(0,0,0,.16);
     /* Mozilla 3.6- */
-    -moz-box-shadow:    inset 0px 2px 3px rgba(0, 0, 0, .16);
+    -moz-box-shadow:    inset 0px 2px 3px rgba(0,0,0,.16);
     /* WebKit 522 (Chrome, Safari 3) */
     /*BUG: The inset shadow does not stay inside of the rounded corners.  (See Chromium issue 29427.) */
-    /* -webkit-box-shadow: inset 0px 2px 3px rgba(0, 0, 0, .16); */
+    /* -webkit-box-shadow: inset 0px 2px 3px rgba(0,0,0,.16); */
     
     /* The margin balances moves the input box over a little so as not to cover the wrench icon. */
     margin: 2px 30px;
@@ -268,7 +268,7 @@ body {
     opacity:    0;
     position:   fixed;
     background: #FFF;
-    background: rgba(255, 255, 255, .95);
+    background: rgba(255,255,255,.95);
     border:     #A3A3A3 1px solid;
     padding:    3px;
     /* This element must be on top (because it is created later, it is also above the topBar too). */
@@ -290,11 +290,11 @@ body {
     /* TODO: The direction of the shadow could be set dynamically based on where it is on the page. */
     /* NOTE: IE has its own DropShadow filter that could be used. */
     /* Mozilla 3.5- */
-    -moz-box-shadow:    2px 2px 3px rgba(0, 0, 0, .2);
+    -moz-box-shadow:    2px 2px 3px rgba(0,0,0,.2);
     /* WebKit 522 (Chrome, Safari 3) */
-    -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,.2);
     /* Opera 10.5/Mozilla 4.0/WebKit */
-    box-shadow:         2px 2px 3px rgba(0, 0, 0, .2);
+    box-shadow:         2px 2px 3px rgba(0,0,0,.2);
 }
 
 
@@ -331,7 +331,7 @@ body {
     /* A solid background for IE/Mozilla 2-/Opera 9.6- */
     background: #FFF;
     /* Transparent white background for Mozilla/Opera 10/WebKit */
-    background: rgba(255, 255, 255, .97);
+    background: rgba(255,255,255,.97);
     /* Firefox 3.6+ */
     background:    -moz-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
     /* Chrome/Safari 5.1+ */
@@ -355,11 +355,11 @@ body {
     /* Add both a drop shadow and an inset shadow to give a slightly rounded effect.
     /*NOTE: IE has its own DropShadow filter that could be used. */
     /* Mozilla 3.6- */
-    -moz-box-shadow:    3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    -moz-box-shadow:    3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
     /* WebKit 522 (Chrome, Safari 3) */
-    -webkit-box-shadow: 3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
     /* Opera 10.5/Mozilla 4.0/WebKit */
-    box-shadow:         3px 3px 6px rgba(0, 0, 0, .2), inset -1px 0 2px rgba(0, 0, 0, .2);
+    box-shadow:         3px 3px 6px rgba(0,0,0,.2), inset -1px 0 2px rgba(0,0,0,.2);
     
     /* Just below the topBar (and context menu) but above callouts. */
     z-index: 999990;
@@ -408,12 +408,12 @@ button {
    border-radius:      4px;
    -moz-border-radius: 4px;
    
-   background-color: rgba(221, 238, 246, .3);
+   background-color: rgba(221,238,246,.3);
    
    /* Opera 10.5/Mozilla 4.0 */
-   box-shadow:         inset 0 1px 3px rgba(255, 255, 255, .5), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
-   -webkit-box-shadow: inset 0 1px 3px rgba(255, 255, 255, .5), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
-   -moz-box-shadow:    inset 0 1px 3px rgba(255, 255, 255, .5), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
+   box-shadow:         inset 0 1px 3px rgba(255,255,255,.5), inset 0 -15px 1px rgba(203,230,242,.3), 0 0 3px rgba(142,193,218,.3);
+   -webkit-box-shadow: inset 0 1px 3px rgba(255,255,255,.5), inset 0 -15px 1px rgba(203,230,242,.3), 0 0 3px rgba(142,193,218,.3);
+   -moz-box-shadow:    inset 0 1px 3px rgba(255,255,255,.5), inset 0 -15px 1px rgba(203,230,242,.3), 0 0 3px rgba(142,193,218,.3);
    
    color:       #3985A8;
    text-shadow: 0 1px #FFF;
@@ -431,7 +431,7 @@ button {
 }
 
 button:hover {
-    background-color: rgba(221, 238, 246, .6);
+    background-color: rgba(221,238,246,.6);
 }
 
 /**
