--- a/styles/base.css
+++ b/styles/base.css
@@ -63,6 +63,7 @@ body {
     background:	   -moz-linear-gradient(rgba(255,255,255,.98), rgba(255,255,255,.93) 25%, rgba(255,255,255,.9));
     /* Chrome/Safari 5.1+ */
     background:	-webkit-linear-gradient(rgba(255,255,255,.98), rgba(255,255,255,.93) 25%, rgba(255,255,255,.9));
+    /* Opera 11.10 */
     background:	     -o-linear-gradient(rgba(255,255,255,.98), rgba(255,255,255,.93) 25%, rgba(255,255,255,.9));
     /* IE 10 */
     background:	    -ms-linear-gradient(rgba(255,255,255,.98), rgba(255,255,255,.93) 25%, rgba(255,255,255,.9));
@@ -336,13 +337,14 @@ body {
     /* Transparent white background for Mozilla/Opera 10/WebKit */
     background: rgba(255,255,255,.97);
     /* Firefox 3.6+ */
-    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 60px);
     /* Chrome/Safari 5.1+ */
-    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
-    background:      -o-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 60px);
+    /* Opera 11.10 */
+    background:      -o-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 60px);
     /* IE 10 */
-    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
-    background:         linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 47%);
+    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 60px);
+    background:         linear-gradient(bottom, rgba(240,240,240,.98), rgba(255,255,255,.98) 60px);
     border:     #A3A3A3 1px solid;
     /* Add enough padding to the top to push the contents past the top bar. */
     /* Add extra padding on the sides so that the optional scroll bars will not cover up any of the content. */
@@ -491,13 +493,14 @@ label {
     /* Transparent background for Firefox 3.5- */
     background: rgba(255, 255, 255, .95);
     /* Firefox 3.6+ */
-    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
+    background:    -moz-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
     /* Chrome/Safari 5.1+ */
-    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
-    background:      -o-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
+    background: -webkit-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
+    /* Opera 11.10 */
+    background:      -o-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
     /* IE 10 */
-    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
-    background:         linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 47%);
+    background:     -ms-linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
+    background:         linear-gradient(bottom, rgba(240,240,240,.97), rgba(255,255,255,.97) 60px);
     position: absolute;
     border: #ccc solid 1px;
     padding: 4px;
@@ -533,6 +536,7 @@ label {
     background-image:    -moz-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
     /* Chrome/Safari 5.1+ */
     background-image: -webkit-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
+    /* Opera 11.10 */
     background-image:      -o-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
     /* IE 10 */
     background-image:     -ms-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
@@ -552,12 +556,13 @@ label {
     margin: -15px 0 0 12px;
     position: absolute;
     width: 20px;
-    border-top: #ccc solid 1px;
-    border-left:  #ccc solid 1px;
+    border-top:  #ccc solid 1px;
+    border-left: #ccc solid 1px;
     /* Firefox 3.6+ */
     background-image:    -moz-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
     /* Chrome/Safari 5.1+ */
     background-image: -webkit-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
+    /* Opera 11.10 */
     background-image:      -o-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
     /* IE 10 */
     background-image:     -ms-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
