--- a/styles/base.css
+++ b/styles/base.css
@@ -570,6 +570,17 @@ label {
 }
 
 
+/* The class allows for simple fade ins and outs with JavaScript. */
+.fade {
+    /* Fade out slightly when the mouse cursor moves off. */
+    /* Transition for Mozilla (Firefox 4.0+) */
+    -moz-transition:    opacity .3s ease;
+    /* Transition for WebKit */
+    -webkit-transition: opacity .3s ease;
+    /* Transition for Opera 10.5+ */
+    -o-transition:      opacity .3s ease;
+}
+
 
 /* Verses created from a search. */
 .search_verse {
