Removed extra semicolon from CSS.

--- a/styles/base.css
+++ b/styles/base.css
@@ -575,7 +575,7 @@ label {
 }
 
 .lex-orig_word {
-    font-family: 'BFHebrew', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif;;
+    font-family: 'BFHebrew', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif;
     font-size: 30px;
 }
 
