--- a/styles/base.css
+++ b/styles/base.css
@@ -526,10 +526,9 @@ label {
     -o-transform:      rotate(45deg);
     -ms-transform:     rotate(45deg);
     transform:         rotate(45deg);
-    height: 20px;
-    margin: -6px 0 0 12px;
     position: absolute;
-    width: 20px;
+    width:  20px;
+    height: 20px;
     border-bottom: #ccc solid 1px;
     border-right:  #ccc solid 1px;
     /* Firefox 3.6+ */
@@ -541,6 +540,7 @@ label {
     /* IE 10 */
     background-image:     -ms-linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
     background-image:         linear-gradient(left top, rgba(255,255,255,0) 45%, rgba(240,240,240,.97) 45%);
+    bottom: -11px;
 }
 .callout .pointer-up {
     -moz-box-shadow:    -1px -3px 6px -3px rgba(0,0,0,.2);
@@ -552,10 +552,9 @@ label {
     -o-transform:      rotate(45deg);
     -ms-transform:     rotate(45deg);
     transform:         rotate(45deg);
-    height: 20px;
-    margin: -15px 0 0 12px;
     position: absolute;
-    width: 20px;
+    width:  20px;
+    height: 20px;
     border-top:  #ccc solid 1px;
     border-left: #ccc solid 1px;
     /* Firefox 3.6+ */
@@ -567,6 +566,7 @@ label {
     /* IE 10 */
     background-image:     -ms-linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
     background-image:         linear-gradient(right bottom, rgba(255,255,255,0) 47%, rgba(255,255,255,.95) 47%);
+    top: -11px;
 }
 
 .lex-title {
