Lexical callouts are now not attempted to be loaded when the current language does not support it.

--- a/styles/base.css
+++ b/styles/base.css
@@ -513,7 +513,8 @@ button:active {
     padding: 0 4px 0 4px;
 }
 
-.scrolls a {
+/* Display a hand cursor for words that can be looked up. */
+.linked a {
     cursor: pointer;
 }
 
