Increase the size of book post- and pre-titles because they look a little small in this font (IM Fell DW Pica).

--- a/styles/base.css
+++ b/styles/base.css
@@ -803,6 +803,11 @@ h2 {
     font-size: 19px;
 }
 
+/* Increase the size of book post- and pre-titles. */
+.lang_en_em h2 {
+    font-size: 30px;
+}
+
 
 /* The divine name of God */
 .d {
