--- a/styles/base.css
+++ b/styles/base.css
@@ -795,28 +795,6 @@ h2 {
 }
 
 
-.lang_en_em, .lang_en_em .verse_number, .lang_en_em .book, .lang_en_em .chapter, .lang_en_em .short_book, .lang_en_em .first_verse:first-letter, .lang_en_em .first_paragraph:first-letter, .lang_en_em .d {
-    /* Enable advanced OpenType typographic features in Mozilla. */
-    /* dlig = Discretionary Ligatures (combine certain characters, e.g., "ct") */
-    /* ss01 = Stylistic Set 1 (e.g., long s (ſ)) */
-    /*NOTE: It would be nice to use lnum (Lining Figures), but it does not appear to work. */
-    /*BUG Automatic conversion of short s's to long s's is not always correct. */
-    /*    For example, Colossians is sometimes spelled "Coloſsians" and other times "Coloſſians." */
-    /*    One true error is 2 Samuel 19:16 where "wass" is rendered "waß"; whereas the KJV 1611 has "wass," surprisingly. */
-    -moz-font-feature-settings: "dlig=1,ss01=1";
-    font-family: 'IM Fell DW Pica', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif!important;
-}
-
-.lang_en_em {
-    font-size: 19px;
-}
-
-/* Increase the size of book post- and pre-titles because they look a little small in this font (IM Fell DW Pica). */
-.lang_en_em h2 {
-    font-size: 30px;
-}
-
-
 /* The divine name of God */
 .d {
     /* Firefox 4.0+ also supports -moz-font-feature-settings:'smcp=1' which turns on small caps as well */
@@ -836,6 +814,27 @@ h2 {
     color: #D00;
 }
 
+
+.lang_en_em, .lang_en_em .verse_number, .lang_en_em .book, .lang_en_em .chapter, .lang_en_em .short_book, .lang_en_em .first_verse:first-letter, .lang_en_em .first_paragraph:first-letter, .lang_en_em .d {
+    /* Enable advanced OpenType typographic features in Mozilla. */
+    /* dlig = Discretionary Ligatures (combine certain characters, e.g., "ct") */
+    /* ss01 = Stylistic Set 1 (e.g., long s (ſ)) */
+    /*NOTE: It would be nice to use lnum (Lining Figures), but it does not appear to work. */
+    /*BUG Automatic conversion of short s's to long s's is not always correct. */
+    /*    For example, Colossians is sometimes spelled "Coloſsians" and other times "Coloſſians." */
+    /*    One true error is 2 Samuel 19:16 where "wass" is rendered "waß"; whereas the KJV 1611 has "wass," surprisingly. */
+    -moz-font-feature-settings: "dlig=1,ss01=1";
+    font-family: 'IM Fell DW Pica', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif!important;
+}
+
+.lang_en_em, .lang_en_em .d {
+    font-size: 19px;
+}
+
+/* Increase the size of book post- and pre-titles because they look a little small in this font (IM Fell DW Pica). */
+.lang_en_em h2 {
+    font-size: 30px;
+}
 
 /* Highlighted found words from searches */
 .f1  {
