--- a/styles/base.css
+++ b/styles/base.css
@@ -1002,3 +1002,42 @@ h2 {
     font-weight: normal;
     font-style: italic;
 }
+
+
+/* WebKit specific CSS */
+
+/* Make the drop caps aligned with the second line of text. */
+.webkit .first_verse:first-letter, .webkit .first_paragraph:first-letter {
+    margin-bottom: 0;
+    margin-top:    5px;
+    padding: 1px;
+}
+
+
+/* Opera specific CSS */
+
+/* Make the drop caps take up two lines, so that wrapping text is not placed over it.  (See John 4:1.) */
+.opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
+    margin-bottom: 0;
+    margin-top:    13px;
+    padding: 1px;
+}
+
+/* Remove extra padding on buttons (this emulates button clicks similar to other browsers). */
+.opera button:active {
+    padding: 5px 14px;
+}
+
+
+/* IE specific CSS */
+
+/* Make the inputIcon appear next to the queryInput. */
+/*NOTE: The query box is slightly off centered in IE with this CSS. */
+.ie .inputIcon {
+    position: relative;
+}
+
+/* Make the drop caps aligned with the second line of text. */
+.ie .first_verse:first-letter, .ie .first_paragraph:first-letter {
+    margin-top: 5px;
+}
